[package]
name = "attach"
version = "0.1.0"
authors = ["7ap"]
edition = "2021"
description = "💉 Simple LoadLibrary DLL injector."
documentation = "https://docs.rs/attach"
repository = "https://github.com/7ap/attach/"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
]
